# temp-rs-ddd

./: .gitignore  Cargo.toml  LICENSE  Makefile
config/: default.toml
crates/cli/: Cargo.toml
crates/cli/src/: cronjob.rs  main.rs  server.rs
crates/cli/src/server/: bootstrap.rs  run.rs  shutdown.rs  wiring.rs
crates/cli/src/server/bootstrap/: config.rs  connections.rs  logger.rs  telemetry.rs
crates/cli/src/server/run/: grpc.rs  http.rs  kafka_consumer.rs  websocket.rs
crates/cli/src/server/run/kafka_consumer/: commit.rs  message.rs  pipeline.rs  runtime.rs
crates/cli/src/server/shutdown/: signal.rs
crates/cli/src/server/wiring/: repositories.rs  services.rs  use_cases.rs
crates/domain/: Cargo.toml
crates/domain/src/: cache.rs  config.rs  lib.rs  repository.rs
crates/domain/src/cache/: distributed_cache.rs  local_cache.rs
crates/domain/src/config/: config.rs  setting.rs  setting_client.rs  setting_interface.rs  setting_mq.rs  setting_repository.rs  setting_telemetry.rs
crates/domain/src/repository/: healthy_repo.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: cache.rs  config.rs  connection.rs  lib.rs  repository.rs  state.rs
crates/infrastructure/src/cache/: moka_cache.rs  redis_cache.rs
crates/infrastructure/src/config/: loader.rs
crates/infrastructure/src/connection/: connections.rs  grpc_conn.rs  kafka_conn.rs  postgres_conn.rs  qdrant_conn.rs  redis_conn.rs  s3_conn.rs  scylla_conn.rs
crates/infrastructure/src/repository/: pg_healthy_repo.rs
crates/interface/: Cargo.toml
crates/interface/src/: http.rs  lib.rs  mq.rs  state.rs
crates/interface/src/http/: dto.rs  handle.rs  middleware.rs  response.rs  router.rs  state.rs  swagger.rs
crates/interface/src/http/dto/: health_dto.rs
crates/interface/src/http/handle/: health_handle.rs
crates/interface/src/http/middleware/: auth_middleware.rs  global_middleware.rs  metric_middleware.rs
crates/interface/src/http/router/: health_router.rs
crates/interface/src/http/swagger/: api_swagger.rs  security_swagger.rs
crates/interface/src/mq/: dto.rs  handler.rs  message.rs  topic.rs
crates/interface/src/mq/handler/: topic01_handler.rs  topic02_handler.rs
crates/shared/src/: constant.rs
crates/shared/src/constant/: env.rs  path.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: constants.rs  lib.rs  log.rs  metric.rs  trace.rs
crates/telemetry/src/constants/: json_fields.rs  log.rs  metric.rs  trace.rs
crates/telemetry/src/log/: fields.rs  fmt.rs
crates/telemetry/src/metric/: recorder.rs
crates/telemetry/src/trace/: exporter.rs  propagator.rs  provider.rs
docs/rustdoc/: .gitignore
environment/: .env.dev  docker-compose-dev.yml
environment/garage/: create_garage_config_dev.sh
