[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/telemetry",
    "crates/interface",
    "crates/application",
    "crates/domain",
    "crates/infrastructure",
    "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Ly Tran Vinh <lytranvinh.work@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/youknow2509/temp-rs-ddd"
readme = "README.md"


[profile.dev]
opt-level = 0
debug = 1
incremental = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false

[profile.test]
opt-level = 1
debug = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = 1

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_imports = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
