[workspace]
resolver = "3"
members = [
    "crates/cli",
    "crates/telemetry",
    "crates/interface",
    "crates/application",
    "crates/domain",
    "crates/infrastructure",
    "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Ly Tran Vinh <lytranvinh.work@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/youknow2509/temp-rs-ddd"
readme = "README.md"


[profile.dev]
opt-level = 0
debug = 1
incremental = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false

[profile.test]
opt-level = 1
debug = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = 1

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_imports = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
config = { version = "0.15.23", default-features = false, features = ["toml"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tokio   = { version = "1", features = ["rt-multi-thread", "time", "signal", "macros"] }

tokio-postgres      = "0.7"
deadpool-postgres   = { version = "0.14", features = ["rt_tokio_1"] }
postgres-native-tls = "0.5"
native-tls          = "0.2"

redis        = { version = "0.27", features = ["tokio-comp", "sentinel", "cluster-async"] }
deadpool-redis = { version = "0.18", features = ["rt_tokio_1", "cluster"] }

moka       = { version = "0.12", features = ["future"] }
serde_json = { version = "1" }

scylla  = { version = "0.14", features = ["ssl"] }
openssl = { version = "0.10", features = ["v102", "v110"] }

aws-sdk-s3          = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }

rdkafka = { version = "0.36", features = ["tokio", "ssl"] }

tonic        = { version = "0.12", features = ["transport", "tls"] }
tonic-health = "0.12"

axum       = { version = "0.8", features = ["macros"] }
tower      = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "cors", "limit", "timeout"] }
