[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing = { workspace = true }
tokio.workspace = true

domain         = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
interface      = { path = "../interface" }
telemetry      = { path = "../telemetry" }
axum.workspace = true
