[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace     = true
config.workspace     = true
serde.workspace      = true
tokio.workspace      = true
tracing.workspace    = true

tokio-postgres.workspace      = true
deadpool-postgres.workspace   = true
postgres-native-tls.workspace = true
native-tls.workspace          = true

redis.workspace        = true
deadpool-redis.workspace = true

scylla.workspace  = true
openssl.workspace = true

aws-sdk-s3.workspace           = true
aws-credential-types.workspace = true

rdkafka.workspace = true

domain = { path = "../domain" }
shared = { path = "../shared" }
