[package]
name = "telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
anyhow.workspace = true
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Logging
tracing.workspace  = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "ansi", "registry"] }
tracing-appender   = "0.2"

# Metrics
metrics                     = "0.24"
metrics-exporter-prometheus = "0.18.3"

# Tracing (OTEL)
tracing-opentelemetry              = "0.33"
opentelemetry                      = "0.32"
opentelemetry_sdk                  = { version = "0.32", features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
opentelemetry-otlp                 = { version = "0.32", features = ["grpc-tonic", "http-proto"] }
opentelemetry-semantic-conventions = "0.32"
opentelemetry-jaeger-propagator    = "0.32"
tonic                              = { version = "0.14.6", default-features = false }

# Tokio runtime for OTEL batch exporter
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
